--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,12 @@ body {
 }
 
 .theme-dark {
-  @apply h-screen w-screen bg-gradient-to-r from-[#0f1728] via-[#192b56] bg-[#0a0f1d];
+  @apply h-screen w-screen bg-gradient-to-bl from-violet-900 to-pink-900;
 }
 
 .theme-light {
-  @apply h-screen w-screen bg-gradient-to-br from-blue-200 via-violet-300 bg-cyan-100;
+  @apply h-screen w-screen bg-gradient-to-bl from-sky-300 via-rose-200 to-blue-200;
+
 }
 
 .header {
