--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,11 @@ body {
 }
 
 .theme-dark {
-  @apply h-screen w-screen bg-gradient-to-bl from-violet-900 to-pink-900;
+  @apply h-screen w-screen bg-gradient-to-bl from-sky-900 to-rose-900;
 }
 
 .theme-light {
-  @apply h-screen w-screen bg-gradient-to-bl from-sky-300 via-rose-200 to-blue-200;
+  @apply h-screen w-screen bg-gradient-to-bl from-sky-200 to-rose-300;
 
 }
 
