--- a/src/App.css
+++ b/src/App.css
@@ -27,33 +27,21 @@ body {
 }
 
 .Google {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-right: 140px; 
 }
 
 .task {
-  background: #f4f4f4;
-  margin: 5px;
-  padding: 10px 20px;
+  background: whitesmoke;
+  margin: 0px;
+  padding: 5px 10px;
   cursor: pointer;
-}
-
-.task.reminder {
-  border-left: 5px solid green;
-}
-
-.task h3 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-footer {
-  margin-top: 30px;
-  text-align: center;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  margin-top:5px
 }
 
 .headerLogo {
